# single-cell-rnaseq-immune-profiling

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-lock.txt  run_pipeline.py
.github/workflows/: ci.yml
scripts/: 01_load_and_qc.py  02_preprocess.py  03_reduce_dimensions.py  04_cluster.py  05_annotate_cell_types.py  06_publication_figures.py  06_trajectory.py  07_t_cell_subclustering.py  08_publication_figures.py  09_output_manifest.py  make_3d_umap_gif.py  make_profile_banner.py  make_slow_rotation.py  palette.py  validate_outputs.py
tests/: conftest.py  test_pipeline.py
