[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "single-cell-rnaseq-immune-profiling"
version = "1.0.0"
description = "Single-cell RNA-seq immune cell profiling pipeline using scanpy"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Ekin Kahraman"}]
keywords = ["bioinformatics", "single-cell", "RNA-seq", "scanpy", "immune profiling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "scanpy>=1.10",
    "anndata>=0.10",
    "leidenalg>=0.10",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
